prevent the awkward horizontal scroll on mobile devices

--- a/app/styles/layout/_feeds.scss
+++ b/app/styles/layout/_feeds.scss
@@ -1,3 +1,8 @@
+//this is prevent the awkward horizontal scroll on mobile devices
+.container.global-container {
+  overflow-x: hidden;
+}
+
 .feed-container {
   width: 100%;
   position: relative;
